--- a/frontend/templates/listar_filmes.html
+++ b/frontend/templates/listar_filmes.html
@@ -1,17 +1,22 @@
 <!doctype html>
 <html lang="PT-BR">      
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     
     <title>Cadastro de Filmes</title>
+    <style>
+        body {
+            font-family: 'Raleway', sans-serif;
+            color: black;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,11 +29,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="navbar-nav mr-auto">
                     <span class="navbar-text">My Family Cinema - Cadastro de Filmes</span>
-                    <a class="nav-item nav-link" href="" id="linkInicio">Início
+                    <a class="nav-item nav-link" href="#" id="linkInicio">Início
                         <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="" id="linkListarFilmes">Listar</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" 
+                        id="navbarDropdownMenuLink" data-toggle="dropdown" 
+                        aria-haspopup="true" aria-expanded="false">
+                          Listar
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          <a class="dropdown-item" href="#" id="linkListarProdutoras">Produtoras</a>
+                          <a class="dropdown-item" href="#" id="linkListarFilmes">Filmes</a> 
+                          <a class="dropdown-item" href="#" id="linkListarElencos">Elencos</a>
+                        </div>
+                    </li>
                     <a class="nav-item nav-link" data-toggle="modal" 
-                        data-target="#modalIncluirFilmes" href="">Incluir</a>    
+                        data-target="#modalIncluirFilme" href="#" data-toggle="modal" data-target="#ExemploModalCentralizado">Incluir</a>
                 </div>
             </div>
 
@@ -36,7 +52,6 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
         </nav>
         
         <div id="corpoDaPagina">
@@ -46,12 +61,12 @@
                 Bem vindo ao Cadastro de Filmes.
             </div>
             <br>
-            <div class="modal fade" id="modalIncluirFilmes" tabindex="-1" role="dialog"
+            <div class="modal fade" id="modalIncluirFilme" tabindex="-1" role="dialog"
                 aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Incluir Filme</h5>
+                            <h5 class="modal-title" id="exampleModalLabel">Incluir série</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -88,17 +103,34 @@
                                     <input type="text" class="form-control" id="campoPremio"
                                         aria-describedby="premioHelp" placeholder="Informe os Prêmios do Filme">
                                 </div>
+                                <div class="form-group">
+                                    <label for="campoIdProdutora">Produtora</label>
+                                    <select class="form-control" id="campoProdutoraId" aria-describedby="produtoraidHelp" placeholder="Id da produtora"></select>
+                                    <small id="produtoraidHelp" class="form-text text-muted">(Selecione a produtora do filme)</small>
+                                </div>
                             </form>
                         </div>
-
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                            <button id="btIncluirFilmes" type="button" class="btn btn-primary">Incluir</button>
+                            <button id="btIncluirFilme" type="button" class="btn btn-primary">Incluir</button>
                         </div>
                     </div>
                 </div>
             </div>
-
+            <div class="container" id="ListarProdutoras">
+                <table class="table table-striped table-hover" id="TabelaProdutoras">
+                    <thead>
+                        <tr>
+                            <th scope="col">Nome</th>
+                            <th scope="col">País</th>
+                            <th scope="col">Ano</th>
+                            <th scope="col">Excluir</th>
+                        </tr>
+                    </thead>
+                    <tbody id="corpoTabelaProdutoras">
+                    </tbody>
+                </table>
+            </div>
              <table class="table invisible table-striped table-hover" id="TabelaFilmes">
                 <thead>
                     <tr>
@@ -108,7 +140,7 @@
                         <th scope="col">Ano de Lançamento</th>
                         <th scope="col">Diretor</th>
                         <th scope="col">Prêmios</th>
-                        <th scope="col">Excluir Filme</th>
+                        <th scope="col">Excluir</th>
 
                     </tr>
                 </thead>
@@ -116,11 +148,27 @@
                    
                 </tbody>
             </table>
-
         </div> 
     </div>
+    <div class="container" id="ListarElencos">
+                <table class="table table-striped table-hover" id="TabelaElencos">
+                    <thead>
+                        <tr>
+                            <th scope="col">Ator/atriz</th>
+                            <th scope="col">Personagem</th>
+                            <th scope="col">Categoria</th>
+                            <th scope="col">Filme</th>
+                            <th scope="col">Excluir</th>
+                        </tr>
+                    </thead>
+                    <tbody id="corpoTabelaElencos">
+                    </tbody>
+                </table>
+            </div>
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
@@ -128,8 +176,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-     <!-- código específico do front-end -->
-     <script src="../js/meuscript.js"></script>
-     
+
+    <script src="js/meuscript.js"></script>
 </body>
+
 </html>
